@@ -265,7 +265,7 @@ DEFAULT_LIST_TYPES = [
 
 NO_TRIGGER_WF_TRANSITION_UNTIL = '__nothing__'
 
-HIDE_DECISION_UNDER_WRITING_MSG = "<p>The decision is currently under edit by managers, you can not access it.</p>"
+HIDE_DECISION_UNDER_WRITING_MSG = "<p class='highlightValue'>The decision is currently under edit by managers, you can not access it.</p>"
 
 
 def registerClasses():
