@@ -183,6 +183,9 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - A meeting containing items in state 'returned_to_proposing_group' may not be closed anymore
 - Added boolean field Meeting.extraordinarySession, informational field useable when necessary
 - Simplified testing infrastructure when overrided by a plugin so th plugin does not need to call existing tests
+- When using WF adaptations 'hide_decisions_when_under_writing', do not only show the decision to MeetingManagers but to
+  every users able to edit the item, this way, used together with WF adaptation 'return_to_proposing_group', the decision
+  is viewable by users that will correct the item
 
 3.3 (2015-02-27)
 ----------------
